# foodwebviz

./: 01_trophic_levels.ipynb  01_trophic_levels.py  02_heatmaps.ipynb  02_heatmaps.py  03_network-vis.ipynb  03_network-vis.py  LICENSE  ParticleAnimation.py  README.md  README.rst  animate_food_web.py  apt.txt  draw.py  part_viz_utils.py  postBuild  pyproject.toml  requirements.txt  setup.py
.github/workflows/: Development  codeql.yml
examples/: Florida_Bay_wet_season.scor  Florida_Cypress_Wetlands_wet_season.scor  South_Africa_Mdloti_Dec_2002.scor  food_web.html  foodwebviz_tutorial.ipynb  interactive_food_web_graph.html  visualization.ipynb
examples/data/: Baltic_Sea_Aggregated.scor  Chesapeake_Bay_mesohaline_C_annual.scor  Crystal_Creek_Control.scor  Crystal_Creek_Therm.scor  Cypress_Wetland_Florida_wet_season.scor  Richards_Bay_C_Summer.csv  Richards_Bay_C_Summer.scor  Richards_Bay_C_Summer.xls  Richards_Bay_N_Summer.scor  Richards_Bay_N_Winter.scor  Richards_Bay_P_Summer.scor  Richards_Bay_P_Winter.scor  SierraLeone_135.scor  USA_Mid_Atlantic_Bight_99.scor  metadata.csv
examples/sample_output/: interactive_food_web_graph.html
foodwebs/: __init__.py  anim_visuals.py  animate_food_web.py  foodweb.py  foodweb_io.py  io.py  netImage.py  normalization.py  part_viz_utils.py  utils.py  visualization.py
foodwebviz/: __init__.py  animate_food_web.py  create_animated_food_web.py  foodweb.py  gif_animate.py  io.py  netImage.py  normalisation.py  normalization.py  part_viz_utils.py  utils.py  visualization.py  visuals.py
foodwebviz/animation/: animation_utils.py  network_image.py
notebooks/: 04_networks.ipynb  OLD_03_network_visualization.ipynb  Untitled.ipynb
tests/: conftest.py  test_foodweb.py  test_io.py  test_normalization.py  test_utils.py  trophic_levels.py
