[project]
name = "foodwebviz"
description = "Foodwebs visualization package"
version = "0.1"
readme = "README.md"
authors = [
    { name = "Mateusz Ikrzyński", email = "mateusz.iskrzynski@ibspan.waw.pl" },
    { name = "Łukasz Pawluczuk", email = "lukpawlucz@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.7"

dependencies = [
    "pandas==1.1.3",
    "networkx==2.6.2",
    "xlwt==1.3.0",
    "xlrd==2.0.1",
    "seaborn==0.11.2",
    "plotly==4.9.0",
    "pyvis==0.1.8.2",
    "kaleido",
    "psutil",
    "wand"
]

[project.urls]
Documentation = "https://github.com/lpawluczuk/foodwebviz"
"Source Code" = "https://github.com/lpawluczuk/foodwebviz"
"Issue Tracker" = "https://github.com/lpawluczuk/foodwebviz/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "ruff ==0.0.138",
    "mypy ==0.982"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]


[tool.ruff]
line-length = 110

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
